# py_webgames

./: README.md  pyproject.toml  wsgi.py
app/: controller.py  resource.py  service.py  web.py
app/config/: emulators.json  emulators.py
script/: poetry.py
static/script/: index.js
templates/: base.html  game.html  game.initial.html  gameplay.html  index.html
templates/includes/: header.html
