[project]
name = "py-webgames"
version = "0.6.0"
description = "Servidor de games via Emulator.js"
authors = [
    {name = "Douglas Panhota",email = "douglaspands@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "parsel (>=1.10.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
mypy = "^1.15.0"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
debug = "script.poetry:debug"
start = "script.poetry:start"
